--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,11 @@ pandas = "^2.2.3"
 pyarrow = "^17.0.0"
 pypika = "^0.48.9"
 boto3 = {extras = ["s3"], version = "^1.35.37"}
+kubernetes = "^31.0.0"
+requests = "^2.32.3"
+openshift-client = "^2.0.4"
+psycopg2 = "^2.9.10"
+kr8s = "^0.17.4"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.8.0"
