--- a/data_prep/logging.config
+++ b/data_prep/logging.config
@@ -1,5 +1,6 @@
 [loggers]
-keys=root,main_extract,main_injest,oradb_lib,docker_parser,async_loader,object_store,env_config,main_common
+keys=root,main_ora_extract,main_ora_injest,oradb_lib,docker_parser,async_loader,
+    object_store,env_config,main_common,kubernetes_wrapper,main_spar_extract
 
 [handlers]
 keys=consoleHandler
@@ -13,16 +14,16 @@ keys=consoleFormatter
 level=INFO
 handlers=consoleHandler
 
-[logger_main_extract]
+[logger_main_ora_extract]
 level=DEBUG
 handlers=consoleHandler
-qualname=main_extract
+qualname=main_ora_extract
 propagate=0
 
-[logger_main_injest]
+[logger_main_ora_injest]
 level=DEBUG
 handlers=consoleHandler
-qualname=main_injest
+qualname=main_ora_injest
 propagate=0
 
 [logger_oradb_lib]
@@ -60,6 +61,21 @@ level=DEBUG
 handlers=consoleHandler
 qualname=main_common
 propagate=0
+
+[logger_kubernetes_wrapper]
+level=DEBUG
+handlers=consoleHandler
+qualname=kubernetes_wrapper
+propagate=0
+
+[logger_main_spar_extract]
+level=DEBUG
+handlers=consoleHandler
+qualname=main_spar_extract
+propagate=0
+
+
+
 
 
 #----- HANDLERS
