feat: extract data from postgres
* may have issues with geometry data
* should add testing
* oracle injest / export could used some patching

--- a/data_prep/logging.config
+++ b/data_prep/logging.config
@@ -1,6 +1,7 @@
 [loggers]
 keys=root,main_ora_extract,main_ora_injest,oradb_lib,docker_parser,async_loader,
-    object_store,env_config,main_common,kubernetes_wrapper,main_spar_extract
+    object_store,env_config,main_common,kubernetes_wrapper,main_spar_extract,
+    postgresdb_lib, constants
 
 [handlers]
 keys=consoleHandler
@@ -74,9 +75,17 @@ handlers=consoleHandler
 qualname=main_spar_extract
 propagate=0
 
+[logger_postgresdb_lib]
+level=DEBUG
+handlers=consoleHandler
+qualname=postgresdb_lib
+propagate=0
 
-
-
+[logger_constants]
+level=DEBUG
+handlers=consoleHandler
+qualname=constants
+propagate=0
 
 #----- HANDLERS
 
