--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,4 +28,9 @@
     "ruff.lint.args": [
         "--unfixable=F401", "--extend-ignore=D200,D202,D212"
     ],
+    "python.testing.pytestArgs": [
+        "data_prep"
+    ],
+    "python.testing.unittestEnabled": false,
+    "python.testing.pytestEnabled": true,
 }
