feat: extract modified to do pg_dump

--- a/data_prep/logging.config
+++ b/data_prep/logging.config
@@ -1,7 +1,7 @@
 [loggers]
 keys=root,main_ora_extract,main_ora_injest,oradb_lib,docker_parser,async_loader,
     object_store,env_config,main_common,kubernetes_wrapper,main_spar_extract,
-    postgresdb_lib, constants
+    postgresdb_lib, constants,db_lib
 
 [handlers]
 keys=consoleHandler
@@ -86,6 +86,14 @@ level=DEBUG
 handlers=consoleHandler
 qualname=constants
 propagate=0
+
+[logger_db_lib]
+level=DEBUG
+handlers=consoleHandler
+qualname=db_lib
+propagate=0
+
+
 
 #----- HANDLERS
 
