--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,9 +41,9 @@ services:
       test: ["CMD", "pg_isready", "-U", postgres]
     ports: ["5432:5432"]
 
-  postgres-data-migrations:
+  postgres-migrations:
     image: flyway/flyway:10-alpine
-    container_name: postgres-data-migrations
+    container_name: postgres-migrations
     command: info migrate info
     volumes: ["./migrations_spar/sql:/flyway/sql:ro"]
     environment:
@@ -59,10 +59,10 @@ services:
   postgres-data-load:
     image: python:3.11.10-slim-bullseye
     container_name: postgres-data-load
-    entrypoint: /application/docker_run_SPAR_TEST.sh
+    entrypoint: ["CMD", "/application/docker_run_SPAR_TEST.sh"]
     working_dir: /application
     volumes:
-      -  "./.venv:/venv"
+      -  "./.venv:/application/.venv"
       - "./data_prep:/application"
       - "./poetry.lock:/application/poetry.lock"
       - "./pyproject.toml:/application/pyproject.toml"
@@ -73,7 +73,7 @@ services:
     env_file:
       - ".env"
     depends_on:
-      postgres-data-migrations:
+      postgres-migrations:
         condition: service_completed_successfully
 
   # Name of the Docker Compose service
@@ -117,7 +117,7 @@ services:
   oracle-data-load:
     image: python:3.11
     container_name: oracle-data-load
-    entrypoint: /application/docker_run_ORA_TEST.sh
+    entrypoint: ["CMD", "/application/docker_run_ORA_TEST.sh"]
     working_dir: /application
     volumes:
       - "./.venv:/venv"
