feat: 9 load nr spar db (#38)
Co-authored-by: Derek Roberts <derek.roberts@gmail.com>

--- a/data_prep/logging.config
+++ b/data_prep/logging.config
@@ -1,5 +1,7 @@
 [loggers]
-keys=root,main_extract,main_injest,oradb_lib,docker_parser,async_loader,object_store,env_config,main_common
+keys=root,main_ora_extract,main_ora_injest,oradb_lib,docker_parser,async_loader,
+    object_store,env_config,main_common,kubernetes_wrapper,main_spar_extract,
+    postgresdb_lib, constants,db_lib
 
 [handlers]
 keys=consoleHandler
@@ -13,16 +15,16 @@ keys=consoleFormatter
 level=INFO
 handlers=consoleHandler
 
-[logger_main_extract]
+[logger_main_ora_extract]
 level=DEBUG
 handlers=consoleHandler
-qualname=main_extract
+qualname=main_ora_extract
 propagate=0
 
-[logger_main_injest]
+[logger_main_ora_injest]
 level=DEBUG
 handlers=consoleHandler
-qualname=main_injest
+qualname=main_ora_injest
 propagate=0
 
 [logger_oradb_lib]
@@ -60,6 +62,37 @@ level=DEBUG
 handlers=consoleHandler
 qualname=main_common
 propagate=0
+
+[logger_kubernetes_wrapper]
+level=DEBUG
+handlers=consoleHandler
+qualname=kubernetes_wrapper
+propagate=0
+
+[logger_main_spar_extract]
+level=DEBUG
+handlers=consoleHandler
+qualname=main_spar_extract
+propagate=0
+
+[logger_postgresdb_lib]
+level=DEBUG
+handlers=consoleHandler
+qualname=postgresdb_lib
+propagate=0
+
+[logger_constants]
+level=DEBUG
+handlers=consoleHandler
+qualname=constants
+propagate=0
+
+[logger_db_lib]
+level=DEBUG
+handlers=consoleHandler
+qualname=db_lib
+propagate=0
+
 
 
 #----- HANDLERS
