--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
     "python.sortImports.args": [
         "--profile", "black"
     ],
+    "python.defaultInterpreterPath": "./.venv/bin/python",
     "[python]": {
         "editor.defaultFormatter": "ms-python.black-formatter",
         "editor.formatOnSave": true,
@@ -27,4 +28,9 @@
     "ruff.lint.args": [
         "--unfixable=F401", "--extend-ignore=D200,D202,D212"
     ],
+    "python.testing.pytestArgs": [
+        "data_prep"
+    ],
+    "python.testing.unittestEnabled": false,
+    "python.testing.pytestEnabled": true,
 }
