--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,12 +17,18 @@ pandas = "^2.2.3"
 pyarrow = "^17.0.0"
 pypika = "^0.48.9"
 boto3 = {extras = ["s3"], version = "^1.35.37"}
+kubernetes = "^31.0.0"
+requests = "^2.32.3"
+openshift-client = "^2.0.4"
+kr8s = "^0.17.4"
 
+psycopg2-binary = "^2.9.10"
 [tool.poetry.group.dev.dependencies]
 black = "^24.8.0"
 ruff = "^0.6.9"
 mypy-boto3 = "^1.35.38"
 
+pytest = "^8.3.3"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
@@ -35,3 +41,16 @@ line-length = 80
 
 [tool.black]
 line-length = 80
+
+# Ignore some errors in tests as they are not relevant
+[tool.ruff.lint.extend-per-file-ignores]
+"**/tests/**/*.py" = [
+    # at least this three should be fine in tests:
+    "S101", # asserts allowed in tests...
+    "S105", # local dev password fields are verified
+    "ARG", # Unused function args -> fixtures nevertheless are functionally relevant...
+    "FBT", # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
+    # The below are debateable
+    "PLR2004", # Magic value used in comparison, ...
+    "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
+]
